# Research carried out within the scope of the Associated
# International Laboratory: Joint Japanese-French Robotics Laboratory
# (JRL)
#
# Author: Florent Lamiraux
#

idldir = @datadir@/idl/hppCorbaServer
dist_idl_DATA=\
	hppciProblemServer.idl \
	hppciRobotServer.idl \
	hppciObstacleServer.idl \
	hppciCommonServer.idl  
